Copied in code from github. End of lesson 135.

--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -30,12 +30,8 @@
     }
 
     .value {
-      margin: 0, 10px;
+      margin: 0 10px;
     }
-  }
-
-  .quantity {
-    padding-left: 20px;
   }
 
   .remove-button {
